envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: django_projects
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: django_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: django_cluster
      connect_timeout: 2.5s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: django_project11
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: django_project11
                      port_value: 8000
              - endpoint:
                  address:
                    socket_address:
                      address: django_project22
                      port_value: 8001
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
